--- a/index.html
+++ b/index.html
@@ -20,17 +20,20 @@
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="icon-tasks" viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"/><path d="m9 17-3-3 1.41-1.41L9 14.17l4.59-4.59L15 11l-6 6z"/></symbol>
         <symbol id="icon-inbox" viewBox="0 0 24 24"><path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 12h-4c0 1.66-1.34 3-3 3s-3-1.34-3-3H5V5h14v10z"/></symbol>
-        <symbol id="icon-finance" viewBox="0 0 24 24"><path d="M7 18h2V6H7v12zm4 0h2V6h-2v12zm-8 4h18V4H3v18zM19 6v12h2V6h-2zM5 6v12h2V6H5z"/></symbol>
+        <symbol id="icon-wallet" viewBox="0 0 24 24"><path d="M21 4H3c-1.11 0-2 .89-2 2v12c0 1.1.89 2 2 2h18c1.1 0 2-.9 2-2V6c0-1.11-.9-2-2-2zm0 14H3V8h18v10zm-10-6h9v2h-9v-2z"/></symbol>
         <symbol id="icon-progress" viewBox="0 0 24 24"><path d="M4 9h4v11H4zm6 3h4v8h-4zm6-6h4v14h-4z"/></symbol>
         <symbol id="icon-home" viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></symbol>
         <symbol id="icon-add" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></symbol>
         <symbol id="icon-delete" viewBox="0 0 24 24"><path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/></symbol>
+        <symbol id="icon-edit" viewBox="0 0 24 24"><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></symbol>
         <symbol id="icon-copy" viewBox="0 0 24 24"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></symbol>
         <symbol id="icon-close" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></symbol>
         <symbol id="icon-moon" viewBox="0 0 24 24"><path d="M9.37 5.51A7.35 7.35 0 0 0 9.1 7.5c0 4.08 3.32 7.4 7.4 7.4.68 0 1.35-.09 1.99-.27C17.45 18.2 14.9 20 12 20c-4.41 0-8-3.59-8-8 0-2.91 1.8-5.45 4.37-6.49z"/></symbol>
         <symbol id="icon-sun" viewBox="0 0 24 24"><path d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.03-3.63 2.94-6.54 6.57-6.57L10 4.41c-4.22.36-7.64 3.78-8 8zM20 13h2c-.36-4.22-3.78-7.64-8-8v2.02c3.63.03 6.54 2.94 6.57 6.57L20 13z"/></symbol>
         <symbol id="icon-google" viewBox="0 0 48 48"><path fill="#4285F4" d="M45.12 24.5c0-1.56-.14-3.06-.4-4.5H24v8.51h11.84c-.51 2.75-2.06 5.08-4.39 6.64v5.52h7.11c4.16-3.83 6.56-9.47 6.56-16.17z"/><path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.8l-7.11-5.52c-2.16 1.45-4.92 2.3-8.78 2.3-6.68 0-12.35-4.48-14.38-10.48H2.1v5.7C6.02 42.66 14.48 48 24 48z"/><path fill="#FBBC05" d="M9.62 28.18c-.48-1.45-.76-3-.76-4.68s.28-3.23.76-4.68V13.1H2.1c-1.4 2.78-2.23 5.92-2.23 9.22s.84 6.44 2.23 9.22l7.52-5.72z"/><path fill="#EA4335" d="M24 9.48c3.52 0 6.62 1.22 9.09 3.52l6.29-6.29C35.91 2.82 30.46 0 24 0 14.48 0 6.02 5.34 2.1 13.1l7.52 5.72C11.65 13.96 17.32 9.48 24 9.48z"/></symbol>
         <symbol id="icon-logout" viewBox="0 0 24 24"><path d="M17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z"/></symbol>
+        <symbol id="icon-arrow-left" viewBox="0 0 24 24"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></symbol>
+        <symbol id="icon-arrow-right" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></symbol>
     </svg>
     
     <div id="login-container" class="container visible">
@@ -52,7 +55,7 @@
             <div class="sidebar-header"><h1 class="logo">Crea</h1></div>
             <button class="nav-button active" data-tab="dashboard-content"><svg class="icon"><use href="#icon-home"/></svg> Dashboard</button>
             <button class="nav-button" data-tab="projects-content"><svg class="icon"><use href="#icon-tasks"/></svg> Proyectos</button>
-            <button class="nav-button" data-tab="finances-content"><svg class="icon"><use href="#icon-finance"/></svg> Finanzas</button>
+            <button class="nav-button" data-tab="finances-content"><svg class="icon"><use href="#icon-wallet"/></svg> Finanzas</button>
             <button class="nav-button" data-tab="progress-content"><svg class="icon"><use href="#icon-progress"/></svg> Progreso</button>
             <button class="nav-button" data-tab="inbox-content"><svg class="icon"><use href="#icon-inbox"/></svg> Ideas</button>
             <div class="sidebar-footer">
@@ -76,8 +79,12 @@
             </header>
 
             <main class="main-content">
-                <div class="tab-content" id="dashboard-content">
-                    <h2 class="month-title" id="dashboardMonthTitle"></h2>
+                <div class="tab-content active" id="dashboard-content">
+                    <div class="calendar-header">
+                        <button class="btn-icon nav-week-btn" id="prev-week-btn"><svg class="icon"><use href="#icon-arrow-left"/></svg></button>
+                        <h2 class="month-title" id="dashboardMonthTitle"></h2>
+                        <button class="btn-icon nav-week-btn" id="next-week-btn"><svg class="icon"><use href="#icon-arrow-right"/></svg></button>
+                    </div>
                     <div id="weekly-dashboard-grid" class="weekly-dashboard-grid"></div>
                     <div class="card">
                         <div class="card-header">
@@ -102,7 +109,7 @@
     <nav class="bottom-nav">
         <button class="nav-button active" data-tab="dashboard-content"><svg class="icon"><use href="#icon-home"/></svg><span>Dashboard</span></button>
         <button class="nav-button" data-tab="projects-content"><svg class="icon"><use href="#icon-tasks"/></svg><span>Proyectos</span></button>
-        <button class="nav-button" data-tab="finances-content"><svg class="icon"><use href="#icon-finance"/></svg><span>Finanzas</span></button>
+        <button class="nav-button" data-tab="finances-content"><svg class="icon"><use href="#icon-wallet"/></svg><span>Finanzas</span></button>
         <button class="nav-button" data-tab="progress-content"><svg class="icon"><use href="#icon-progress"/></svg><span>Progreso</span></button>
         <button class="nav-button" data-tab="inbox-content"><svg class="icon"><use href="#icon-inbox"/></svg><span>Ideas</span></button>
     </nav>
