--- a/index.html
+++ b/index.html
@@ -43,44 +43,67 @@
                 <!-- ... existing dashboard content ... -->
             </div>
 
-            <!-- Tasks View (hidden by default) -->
+            <!-- Tasks View -->
             <div id="tasks-view" class="hidden">
+                <!-- ... existing tasks content ... -->
+            </div>
+
+            <!-- Projects View -->
+            <div id="projects-view" class="hidden">
                 <div class="flex justify-between items-center mb-6">
-                    <h2 class="text-lg font-semibold">Your Tasks</h2>
-                    <button class="add-btn w-10 h-10 bg-indigo-500 text-white rounded-full flex items-center justify-center shadow-md">
+                    <h2 class="text-lg font-semibold">Your Projects</h2>
+                    <button onclick="openProjectModal()" class="w-10 h-10 bg-indigo-500 text-white rounded-full flex items-center justify-center shadow-md">
                         <i class="fas fa-plus"></i>
                     </button>
                 </div>
-                
-                <div class="mb-4">
-                    <div class="flex space-x-2 overflow-x-auto pb-2">
-                        <button class="px-4 py-1 bg-indigo-500 text-white rounded-full text-sm whitespace-nowrap">All</button>
-                        <button class="px-4 py-1 bg-gray-200 rounded-full text-sm whitespace-nowrap">Today</button>
-                        <button class="px-4 py-1 bg-gray-200 rounded-full text-sm whitespace-nowrap">Work</button>
-                        <button class="px-4 py-1 bg-gray-200 rounded-full text-sm whitespace-nowrap">Personal</button>
-                        <button class="px-4 py-1 bg-gray-200 rounded-full text-sm whitespace-nowrap">Completed</button>
-                    </div>
-                </div>
-                
-                <div id="tasks-container" class="space-y-3">
-                    <!-- Tasks will be rendered here by script.js -->
+                <div id="projects-container" class="space-y-4">
+                    <!-- Projects will be rendered here -->
                 </div>
             </div>
 
-            <!-- Other Views (Projects, Finances, Kittens) -->
+            <!-- Other Views (Finances, Kittens) -->
             <!-- ... -->
         </main>
 
         <!-- Bottom Navigation -->
-        <nav class="bg-white border-t border-gray-200 p-2">
+        <nav id="bottom-nav" class="bg-white border-t border-gray-200 p-2 hidden">
             <!-- ... existing nav buttons ... -->
         </nav>
 
         <!-- Floating Action Button -->
-        <div class="fixed bottom-20 right-4">
-            <button class="add-btn w-14 h-14 bg-indigo-500 text-white rounded-full flex items-center justify-center shadow-lg hover:bg-indigo-600 transition-colors">
-                <i class="fas fa-plus text-xl"></i>
-            </button>
+        <div id="fab" class="fixed bottom-20 right-4 hidden">
+            <!-- ... existing fab ... -->
+        </div>
+
+        <!-- Project Modal -->
+        <div id="project-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
+            <div class="bg-white rounded-xl shadow-xl w-full max-w-lg">
+                <div class="p-4 border-b">
+                    <h3 id="project-modal-title" class="text-lg font-medium">New Project</h3>
+                </div>
+                <div class="p-4">
+                    <input id="project-id" type="hidden">
+                    <div class="mb-4">
+                        <label for="project-title" class="block text-sm font-medium text-gray-700 mb-1">Title</label>
+                        <input type="text" id="project-title" class="w-full border-gray-300 rounded-md shadow-sm">
+                    </div>
+                    <div class="mb-4">
+                        <label for="project-due-date" class="block text-sm font-medium text-gray-700 mb-1">Due Date (Optional)</label>
+                        <input type="date" id="project-due-date" class="w-full border-gray-300 rounded-md shadow-sm">
+                    </div>
+                    <div class="mb-4">
+                        <h4 class="text-sm font-medium text-gray-700 mb-2">Steps</h4>
+                        <div id="project-steps-container" class="space-y-2">
+                            <!-- Steps will be rendered here -->
+                        </div>
+                        <button onclick="addProjectStep()" class="mt-2 text-sm text-indigo-600 hover:text-indigo-800">+ Add step</button>
+                    </div>
+                </div>
+                <div class="p-4 bg-gray-50 flex justify-end space-x-2">
+                    <button onclick="closeProjectModal()" class="px-4 py-2 bg-gray-200 rounded-md text-sm">Cancel</button>
+                    <button onclick="saveProject()" class="px-4 py-2 bg-indigo-600 text-white rounded-md text-sm">Save Project</button>
+                </div>
+            </div>
         </div>
     </div>
 
